# The sub-directories are built before the current directory.
# In order to change this, include "." in the list of SUBDIRS.
SUBDIRS=phogen phoimg psfgen htrssim xms_pixtemp ero_fits2tm		\
        ero_events ero_rawevents ero_exposure ero_vis comaexp		\
        gendetsim photonmerge analyse_xms_events htrs_psfgen		\
        htrs_pixel_intensity htrs_fits2tm htrs_digital_shaper comaimg	\
        comadet comarecon mmap runsixt projev imgev comaphovign		\
        simputmerge simputsrc ladsim erosim ladspec genlc fudgexp	\
        evpat orbatt nustarsim athenapwfisim
