# The sub-directories are built before the current directory.
# In order to change this, include "." in the list of SUBDIRS.
SUBDIRS=phogen phoimg psfgen htrssim xms_pixtemp ero_fits2tm		\
        ero_calevents ero_rawevents ero_exposure ero_vis comaexp	\
        gendetsim tes_grades comaimg comadet comarecon runsixt projev	\
        imgev comaphovign ladsim erosim makespec makelc fudgexp evpat	\
        orbatt nustarsim athenapwfisim epicpn_events epicmos1_events    \
        epicmos2_events piximpacts tesstream pixdetillum pulsetemplgen  \
        pulsetemplimport streamtotriggers runtes tesconstpileup         \
	comaimgPM comabackpro
