# The sub-directories are built before the current directory.
# In order to change this, include "." in the list of SUBDIRS
SUBDIRS=phogen phoimg psfgen htrssim xms_pixtemp ero_fits2tm		\
        ero_calevents ero_rawevents ero_exposure ero_vis comaexp	\
        gendetsim tes_grades comaimg comadet comarecon runsixt projev	\
        imgev comaphovign ladsim erosim makespec makelc fudgexp evpat	\
        orbatt nustarsim athenawfisim epicpn_events epicmos1_events    \
        epicmos2_events piximpacts tesstream pixdetillum pulsetemplgen  \
        pulsetemplimport streamtotriggers runtes tesconstpileup tessim  \
	comaimgPM comabackpro xml2svg tesreconstruction xifupipeline   \
	gennoisespec exposure_map gradeddetection tesgenimpacts         \
	pha2pi radec2xy runmask sixteversion attgen_dither sixte_arfgen  \
	teslib tesrecons
