AM_CXXFLAGS=-I@abs_top_srcdir@/extlib/simput/extlib/cfitsio

########### LIBRARIES #################

# Libraries that are installed in the 'lib' directory.
#noinst_LIBRARIES=libutilsic.a
lib_LTLIBRARIES=libutilsic.la

# Sources:
libutilsic_la_SOURCES=genutils.cpp inoututils.cpp pulseprocess.cpp

############ HEADERS #################

# Define the headers that will be installed in $(includedir):
include_HEADERS=genutils.h inoututils.h pulseprocess.h

