########### LIBRARIES #################

# Libraries that are installed in the 'lib' directory.
lib_LTLIBRARIES=libutilsic.la

# Sources:
libutilsic_la_SOURCES=genutils.cpp inoututils.cpp pulseprocess.cpp

############ HEADERS #################

# Define the headers that will be installed in $(includedir):
include_HEADERS=genutils.h inoututils.h pulseprocess.h

