AM_CFLAGS =-I@top_srcdir@/extlib/simput/extlib/cfitsio 

########### LIBRARIES #################

# Libraries that are installed in the 'lib' directory.
noinst_LIBRARIES=libhdio.a

# Sources:
libhdio_a_SOURCES=headas_stdio.c

############ HEADERS #################

# Define the headers that will be installed in $(includedir):
include_HEADERS=headas_stdio.h
