########## DIRECTORIES ###############

# Directory where to install the XML files.
xmldir = $(pkgdatadir)/instruments

# GRAVITAS
gravitasdir = $(xmldir)/gravitas
dist_gravitas_DATA = gravitas/hifi.xml

# IXO
ixodir = $(xmldir)/ixo
# WFI
ixowfidir = $(ixodir)/wfi
dist_ixowfi_DATA = ixo/wfi/fullframe.xml 

# Athena
athenadir = $(xmldir)/athena
# WFI
athenawfidir = $(athenadir)/wfi
dist_athenawfi_DATA = athena/wfi/fullframe.xml 
# XMS
athenaxmsdir = $(athenadir)/xms
dist_athenaxms_DATA = athena/xms/plain.xml

# SRG
srgdir = $(xmldir)/srg
dist_srg_DATA = srg/erosita.xml

# LOFT
loftdir = $(xmldir)/loft
dist_loft_DATA = loft/lad.xml

# XMM EPICpn
xmmepicpndir = $(xmldir)/xmm/epicpn
dist_xmmepicpn_DATA = xmm/epicpn/fullframe.xml
dist_xmmepicpn_DATA+= xmm/epicpn/timing.xml
dist_xmmepicpn_DATA+= xmm/epicpn/burst.xml

