########## DIRECTORIES ###############

# Directory where to install the XML files.
xmldir = $(pkgdatadir)/instruments

# Athena
athenadir = $(xmldir)/athena
# WFI
athenawfidir = $(athenadir)/wfi
dist_athenawfi_DATA = athena/wfi/fullframe.xml 
# XMS
athenaxmsdir = $(athenadir)/xms
dist_athenaxms_DATA = athena/xms/plain.xml

# Athena+
athenaplusdir = $(xmldir)/athenaplus
# WFI
athenapluswfidir = $(athenaplusdir)/wfi
dist_athenapluswfi_DATA = athenaplus/wfi/fullframe_core.xml 
dist_athenapluswfi_DATA+= athenaplus/wfi/fullframe_side0.xml 
dist_athenapluswfi_DATA+= athenaplus/wfi/fullframe_side1.xml 
dist_athenapluswfi_DATA+= athenaplus/wfi/fullframe_side2.xml 
dist_athenapluswfi_DATA+= athenaplus/wfi/fullframe_side3.xml 
dist_athenapluswfi_DATA+= athenaplus/wfi/splitframe_core.xml 
# X-IFU
athenaplusxifudir = $(athenaplusdir)/xifu
dist_athenaplusxifu_DATA = athenaplus/xifu/plain.xml
dist_athenaplusxifu_DATA+= athenaplus/xifu/xifu_detector.xml
dist_athenaplusxifu_DATA+= athenaplus/xifu/pulse.fits

# GRAVITAS
gravitasdir = $(xmldir)/gravitas
dist_gravitas_DATA = gravitas/hifi.xml

# IXO
ixodir = $(xmldir)/ixo
# WFI
ixowfidir = $(ixodir)/wfi
dist_ixowfi_DATA = ixo/wfi/fullframe.xml 

# LOFT
loftdir = $(xmldir)/loft
dist_loft_DATA = loft/lad.xml

# MIRAX
miraxdir = $(xmldir)/lattes/mirax
dist_mirax_DATA = lattes/mirax/hxi.xml

# NuSTAR
nustardir = $(xmldir)/nustar
dist_nustar_DATA = nustar/nustar.xml

# SRG
srgdir = $(xmldir)/srg
dist_srg_DATA = srg/erosita.xml

# XMM EPICpn
xmmepicpndir = $(xmldir)/xmm/epicpn
dist_xmmepicpn_DATA = xmm/epicpn/fullframe.xml
dist_xmmepicpn_DATA+= xmm/epicpn/smallwindow.xml
dist_xmmepicpn_DATA+= xmm/epicpn/timing.xml
dist_xmmepicpn_DATA+= xmm/epicpn/burst.xml
dist_xmmepicpn_DATA+= xmm/epicpn/combined12ccds.xml
