########## DIRECTORIES ###############

# Directory where to install the XML files.
xmldir = $(pkgdatadir)/xml

# GRAVITAS
gravitasdir = $(xmldir)/gravitas
dist_gravitas_DATA = gravitas/hifi.xml

# IXO
ixodir = $(xmldir)/ixo
# WFI
wfidir = $(ixodir)/wfi
dist_wfi_DATA = ixo/wfi/fullframe.xml 

# SRG
srgdir = $(xmldir)/srg
dist_srg_DATA = srg/erosita.xml

